--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,13 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
-    // https://mvnrepository.com/artifact/org.assertj/assertj-core
+
     testImplementation 'org.assertj:assertj-core:3.24.2'
+
+    testImplementation 'ch.qos.logback:logback-classic:1.4.14'
+// https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+    implementation 'org.slf4j:slf4j-api:2.0.9'
+
 
 }
 
