--- a/build.gradle
+++ b/build.gradle
@@ -10,15 +10,15 @@ repositories {
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    // embedded tomcat
+    implementation 'org.apache.tomcat.embed:tomcat-embed-core:8.5.42'
+    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:8.5.42'
 
-    testImplementation 'org.assertj:assertj-core:3.24.2'
+    // logback-classic
+    implementation 'ch.qos.logback:logback-classic:1.2.3'
 
-    testImplementation 'ch.qos.logback:logback-classic:1.4.14'
-// https://mvnrepository.com/artifact/org.slf4j/slf4j-api
-    implementation 'org.slf4j:slf4j-api:2.0.9'
-
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 
 }
 
